# crossfuzz

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  go.mod  go.sum  install.sh  shell.nix
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci-image.yml  cli-release.yml  js-publish.yml  python-publish.yml  rust-publish.yml  test.yml
cmd/crossfuzz/: hexdump.go  main.go
e2e/: README.md  cli_test.go  coverage_test.go  differential_test.go  main.go  restart_test.go  subcommands_test.go
e2e/comparers/byte_equal/: byte_equal_test.go  crossfuzz.toml.tmpl
e2e/comparers/custom/: compare.py  crossfuzz.toml.tmpl  custom_test.go
e2e/comparers/harness/: crossfuzz.toml.tmpl  harness_test.go
e2e/comparers/json_structural/: crossfuzz.toml.tmpl  json_structural_test.go
e2e/comparers/none/: crossfuzz.toml.tmpl  none_test.go
e2e/comparers/numeric/: crossfuzz.toml.tmpl  numeric_test.go
e2e/comparers/numeric_relative/: crossfuzz.toml.tmpl  numeric_relative_test.go
e2e/fixtures/branchy/: crossfuzz.toml.tmpl
e2e/fixtures/byte_echo/: crossfuzz.toml.tmpl
e2e/fixtures/crashy/: crossfuzz.toml.tmpl
e2e/fixtures/divergent/: crossfuzz.toml.tmpl
e2e/fixtures/java_abstract_methods/: crossfuzz.toml.tmpl
e2e/fixtures/java_lib_coverage/: crossfuzz.toml.tmpl
e2e/fixtures/memhog/: crossfuzz.toml.tmpl
e2e/fixtures/slow/: crossfuzz.toml.tmpl
e2e/framework/: artifacts.go  ctx.go  orchestrator.go  registry.go  runner.go  stats.go  toolchain.go  workspace.go
e2e/harness/: README.md  c_test.go  common_test.go  cpp_test.go  go_test.go  java_test.go  js_test.go  python_test.go  rust_test.go
e2e/input_filter/: crossfuzz.toml.tmpl  input_filter_test.go
e2e/input_filter/constant/: go.mod.tmpl  main.go
e2e/input_filter/identity/: go.mod.tmpl  main.go
e2e/input_filter/reject/: go.mod.tmpl  main.go
e2e/input_filter/transform/: go.mod.tmpl  main.go
e2e/tests/: all.go
e2e/tests/cli/: cli.go
e2e/tests/coverage/: coverage.go
e2e/tests/differential/: differential.go
e2e/tests/harness/: README.md  c.go  common.go  cpp.go  go.go  java.go  java_abstract.go  java_lib.go  js.go  python.go  rust.go
e2e/tests/input_filter/: input_filter.go
e2e/tests/restart/: restart.go
e2e/tests/subcommands/: subcommands.go
examples/: README.md
examples/base64/: .gitignore  c_target.c  cpp_target.cpp  crossfuzz.toml  python_target.py  target_js.js  target_ts.ts
examples/base64/c/: CMakeLists.txt
examples/base64/cpp/: CMakeLists.txt  cpp_target.cpp
examples/base64/go/: main.go  main_test.go
examples/base64/go_target/: main.go
examples/base64/java/: .gitignore  JavaTarget.java  build.gradle  settings.gradle
examples/base64/js/: package.json  target_js.js  target_ts.ts
examples/base64/python/: python_target.py
examples/base64/rust/: Cargo.toml
examples/json_parse/: .gitignore  JavaTarget.java  c_target.c  crossfuzz.toml  ts_target.ts
examples/json_parse/go/: main.go
examples/json_parse/go_target/: main.go  main_test.go
examples/json_parse/java/: .gitignore  pom.xml
examples/json_parse/js/: ts_target.ts
examples/json_parse/seeds/: valid_object.json
examples/server_fuzz/: .gitignore  JavaReverseProxy.java  crossfuzz.toml  js_harnes.js
examples/server_fuzz/go_api/: main.go
examples/server_fuzz/go_ingress/: main.go
examples/url_parse/: .gitignore  JavaTarget.java  crossfuzz.toml
examples/url_parse/filter/: main.go
examples/url_parse/go/: main.go  main_test.go
examples/url_parse/go_target/: main.go
examples/url_parse/java/: JavaTarget.java
examples/url_parse/seeds/: 002_https_auth  003_ftp  005_pct_encoded  006_uppercase  007_multi_query
harness/: CMakeLists.txt  Makefile  README.md
harness/c/: CMakeLists.txt  crossfuzz-c.pc.in  crossfuzz.c  crossfuzz.h
harness/cmake/: crossfuzz-config.cmake.in
harness/cpp/: CMakeLists.txt  crossfuzz-cpp.pc.in  crossfuzz.cpp  crossfuzz.hpp
harness/go/: compare.go  covcounters.go  crossfuzz.go  filter.go  fuzz.go  instrumentation.go  shm.go
harness/gofilter/: gofilter.go
harness/gofuzz/: covcounters.go  covcounters_test.go  harness.go  server.go
harness/java/: .gitignore  Makefile  build.gradle  settings.gradle
harness/java/src/crossfuzz/: CoverageAgent.java  CoverageRuntime.java  CoverageTransformer.java  Crossfuzz.java  Harness.java  Target.java
harness/java/src/io/killedkenny/crossfuzz/: CoverageAgent.java  CoverageRuntime.java  CoverageTransformer.java  Crossfuzz.java
harness/js/: .gitignore  crossfuzz.ts  instrument.ts  package.json  tsconfig.json
harness/python/: .gitignore  LICENSE  Makefile  README.md  crossfuzz.py  pyproject.toml
harness/rust/: Cargo.toml  README.md
harness/rust/src/: coverage.rs  lib.rs  proto.rs  shm.rs
nix/: docker.nix  nixpkgs.nix  packages.nix
pkg/compare/: compare.go  compare_test.go  custom.go  harness.go  json_structural.go  numeric.go
pkg/config/: config.go
pkg/coverage/: bitmap.go  shmem.go
pkg/engine/: bloom.go  bloom_test.go  coordinator.go  corpus.go  corpus_test.go  dict.go  dict_test.go  minimize.go  minimize_test.go  mutator.go  mutator_bytes.go  mutator_test.go  reduce.go  stats.go
pkg/protocol/: protocol.go
pkg/runner/: compare.go  filter.go  mem_linux.go  mem_other.go  process.go  runner.go  server_process.go
plan/: PHASE2_coverage_go.md
skills/crossfuzz-cli/: SKILL.md
skills/crossfuzz-cli/references/: commands.md  config.md
skills/crossfuzz-harness/: SKILL.md
skills/crossfuzz-harness-c/: SKILL.md
skills/crossfuzz-harness-c/references/: c-harness.md
skills/crossfuzz-harness-go/: SKILL.md
skills/crossfuzz-harness-go/references/: go-harness.md
skills/crossfuzz-harness-java/: SKILL.md
skills/crossfuzz-harness-java/references/: java-harness.md
skills/crossfuzz-harness-js/: SKILL.md
skills/crossfuzz-harness-js/references/: js-harness.md
skills/crossfuzz-harness-python/: SKILL.md
skills/crossfuzz-harness-python/references/: python-harness.md
skills/crossfuzz-harness-rust/: SKILL.md
skills/crossfuzz-harness-rust/references/: rust-harness.md
(+74 files in other folders)
