[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crossfuzz"
version = "0.0.2"
description = "Python harness for the crossfuzz differential fuzzer"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Simon Rawet", email = "Simon@rawet.se" },
]
keywords = ["fuzzing", "differential-fuzzing", "coverage", "security", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "coverage>=7.0",
]

[project.urls]
Homepage = "https://github.com/KilledKenny/crossfuzz"
Source = "https://github.com/KilledKenny/crossfuzz"
Issues = "https://github.com/KilledKenny/crossfuzz/issues"

[tool.hatch.build.targets.wheel]
only-include = ["crossfuzz.py"]

[tool.hatch.build.targets.sdist]
include = [
    "crossfuzz.py",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
