[package]
name = "crossfuzz"
version = "0.0.1"
edition = "2021"
description = "Rust harness for the crossfuzz differential fuzzer — handles shared memory, pipe IPC, and SanitizerCoverage instrumentation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/KilledKenny/crossfuzz"
keywords = ["fuzzing", "differential-fuzzing", "harness", "coverage", "sanitizer"]
categories = ["development-tools::testing"]

[lib]
name = "crossfuzz"
crate-type = ["rlib"]

[dependencies]
libc = "0.2"
serde_json = { version = "1", default-features = false, features = ["std"] }
